            - Support for AC-3 and DTS audio tracks remuxing
            - Support for external SRT and SSA/ASS subtitles
            - Support for auto charset detection of non UTF-8 external subtitles
        - tsMuxeR:
            - Regression: restore the pre-1.82.0 compatibility logic
        - VLC Web Video:
            - Fix NPE

    Renderers:
        - Xbox 360: improved quality
        - Improved Sony Blu-ray Player support (thanks, skeptical)
        - Send thumbnails properly to Samsung 2012 ES and EH models (thanks, dmitche3!)
        - Added renderer profiles (thanks, UMS developers):
            - KalemSoft Media Player
            - Netgear NeoTV
            - Onkyo TX-NR717
            - Sharp Aquos TVs
            - Showtime 4 PS3 homebrew player
            - Sony Bravia EX620 series TVs
            - Sony Bravia W6/W8/W9 (thanks, gui17aume)
            - Sony Home Theatre Systems
            - Telstra T-Box
            - VideoWeb TV
            - Vizio Smart TV
            - Yamaha RX-V3900

    Transcode folder:
        - Add entries for audio files
        - Add missing entries for video files
        - Add entries for web video and web audio files
        - Allow the chapter folder prefix to be localized
        - Hide chapter folders if the duration of the video is less than the chapter length
        - Don't hide engine names in the #--TRANSCODE--# folder if hide_enginenames is true

    Language updates:
        - Updated Dutch translation (thanks, leroy)
        - Updated French translation (thanks, gui17aume)

    Misc:
        - A lot of backports from UMS (thanks, all UMS developers!)
        - Windows: system-wide Java installation is not needed anymore, now we bundle private JRE with installer
        - Fix duplicate entries in DVD/playlist/feed folders: GC566, GC636, GC1483, GH13
        - More accurate checks for reference frame counts to allow more videos to be remuxed rather than transcoded