@@ -15,6 +15,7 @@ Changelog:
             - Regression: restore the pre-1.82.0 compatibility logic
         - VLC Web Video:
             - Fix NPE
+            - Support for external subtitles (thanks, tdcosta100!)
 
     Renderers:
         - Xbox 360: improved quality
